--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-webapp2==3.0.0b1
 beautifulsoup4==4.7.1
-lxml==4.3.3
 pytest==4.4.1
-google-api-python-client
+requests-toolbelt==0.9.1
+Flask==1.0.2
+google-cloud-datastore
