--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,21 @@ dist: xenial
 python:
   - "3.7"
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
+  - tar xvf instance.tar
+
 install:
   - pip install -q -r requirements.txt
 
 script:
-  - pytest  
+  - pytest
+
+deploy:
+  provider: gae
+  keyfile: "instance/service-account.json"
+  project: tapeworm-bot
+  skip_cleanup: true
+  on:
+    branch: master
+    tags: true
