--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ dist: xenial
 python:
   - "3.7"
 
-before_install:
-  - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
-  - tar xvf instance.tar
-
 install:
   - pip install -q -r requirements.txt
 
 script:
   - pytest
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
+  - tar xvf instance.tar
 
 deploy:
   provider: gae
