--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,40 @@ language: python
 
 sudo: required
 dist: xenial
+cache: pip
 
 python:
   - "3.7"
 
 install:
-  - pip install -q -r requirements.txt
+  - pip install -r requirements/requirements-dev.txt
 
-script:
-  - pytest
+stages:
+  - lint
+  - test
+  - deploy
+
+jobs:
+  include:
+    - stage: lint
+      name: "black"
+      script: black --check tests tapeworm
+    - name: "Pylint"
+      script: "pylint tests tapeworm"
+    - stage: test
+      script: pytest tests
+    - stage: deploy
+      script: skip
+      deploy:
+        provider: gae
+        keyfile: "instance/service-account.json"
+        project: tapeworm-bot
+        skip_cleanup: true
+        on:
+          branch: master
+          tags: true
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
   - tar xvf instance.tar
 
-deploy:
-  provider: gae
-  keyfile: "instance/service-account.json"
-  project: tapeworm-bot
-  skip_cleanup: true
-  on:
-    branch: master
-    tags: true
