--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "3.7"
 
 install:
-  - pip install -r requirements/requirements-dev.txt
+  - pip install -r requirements.txt
 
 stages:
   - lint
@@ -23,7 +23,7 @@ jobs:
     - name: "Pylint"
       script: "pylint tests tapeworm"
     - stage: test
-      script: pytest tests
+      script: pytest
     - stage: deploy
       script: skip
       deploy:
