--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ beautifulsoup4==4.7.1
 pytest==4.4.1
 requests-toolbelt==0.9.1
 gunicorn==19.9.0
-google-cloud-datastore
+google-cloud-datastore==1.8.0
+black==19.3b0
+pylint==2.3.1
