--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn==19.9.0
 google-cloud-datastore==1.8.0
 black==19.3b0
 pylint==2.3.1
+pytest-randomly==3.0.0
 pytest-mock==1.10.4
 Faker==1.0.7
 injector==0.17.0
