--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,15 @@
 language: python
-
-sudo: required
+python: '3.7'
 dist: xenial
+
 cache:
   directories:
     - "$HOME/.cache/pip"
 
-python:
-  - "3.7"
-
 install:
-  - pip install -r requirements.txt
+  - pip install nox
 
-script:
-  - black --check tests tapeworm
-  - pylint tests tapeworm
-  - pytest
+script: nox --non-interactive --session lint tests
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
