--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,9 @@
 runtime: python37
 entrypoint: gunicorn -b :$PORT main:app
+readiness_check:
+  path: "/"
+  check_interval_sec: 60
+  timeout_sec: 10
+  failure_threshold: 3
+  success_threshold: 3
+  app_start_timeout_sec: 300
