--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
 install:
   - pip install nox
 
-script: nox --non-interactive --session lint tests
+script: nox --non-interactive --session lint test
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
