--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,18 @@ dist: xenial
 cache:
   directories:
     - "$HOME/.cache/pip"
+    - "app/node_modules"
+
+before_install:
+  - nvm install 13.1.0
+  - nvm use 13.1.0
 
 install:
   - pip install nox
 
-script: nox --non-interactive --session lint test
+script:
+  - nox --non-interactive --session lint test
+  - (cd app && yarn install && yarn build)
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
