--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,11 @@ before_install:
 
 install:
   - pip install nox
+  - (cd app && npm ci)
 
 script:
   - nox --non-interactive --session lint test
-  - (cd app && yarn install && yarn build)
+  - (cd app && npm build)
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_89a54a178b1d_key -iv $encrypted_89a54a178b1d_iv -in instance.tar.enc -out instance.tar -d
