--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,19 @@
 runtime: python37
 entrypoint: gunicorn -b :$PORT main:app
 readiness_check:
-  path: "/"
+  path: "/api/ping"
   check_interval_sec: 60
   timeout_sec: 10
   failure_threshold: 3
   success_threshold: 3
   app_start_timeout_sec: 300
+
+handlers:
+  - url: /static
+    static_dir: app/build/static/
+  - url: /
+    static_files: app/build/index.html
+    upload: app/build/index.html
+    expiration: '15m'
+  - url: /.*
+    script: auto
