--- a/bot/BUILD.bazel
+++ b/bot/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 
 go_library(
@@ -11,6 +12,12 @@ go_library(
     deps = ["@com_github_go_telegram_bot_api_telegram_bot_api//:go_default_library"],
 )
 
+go_image(
+    name = "bot_image",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
+)
+
 go_binary(
     name = "bot",
     embed = [":go_default_library"],
@@ -19,6 +26,7 @@ go_binary(
 
 go_test(
     name = "go_default_test",
+    size = "small",
     srcs = ["bot_test.go"],
     embed = [":go_default_library"],
     deps = [
